# AgentFlow

./: .dockerignore  .gitignore  AGENTFLOW_CLI_GUIDE.md  AGENTFLOW_SKILL_REPORT.md  AI_FEATURES.md  AUTH_GUIDE.md  CHANGELOG.md  CHANGELOG_PORT.md  CLEANUP.md  CONTRIBUTING.md  Cargo_test.toml  DEPLOYMENT_GUIDE.md  DEPLOYMENT_REORG.md  Dockerfile  FINAL_TEST_REPORT.md  INSTALL.md  INSTALL_GUIDE.md  ITERATION_HANDOVER.md  LICENSE  MAKEFILE_CLEANUP.md  MEMORY_SYSTEM_IMPLEMENTATION.md  Makefile  PORT_CHANGE.md  PORT_MIGRATION_GUIDE.md  PORT_UPDATE_SUMMARY.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  RUST_V3_IMPLEMENTATION.md  RUST_V3_QUICKSTART.md  SELF_ITERATION.md  SINGLE_DEPLOYMENT_GUIDE.md  SKILLS_INTEGRATION_SUMMARY.md  TEAM_A_SUMMARY.md  TEAM_B_API_REFERENCE.md  TEAM_B_CHECKLIST.md  TEST_RESULTS.md  TEST_SUMMARY.md  UPDATE_SUMMARY.md  docker-compose.yml  (+11 more)
.agentflow/: CHANGES.md  README.md  boundaries.example.json  config.example.json  config.json
.agentflow/agents/: developer.md  reviewer.md  tester.md
.agentflow/examples/: quick-start.md
.agentflow/rules/: workspace.md
.agentflow/skills/: git-operations.md  testing.md
.claude/: settings.local.json
archives/: quick-start.sh
dashboard/: IMPLEMENTATION_SUMMARY.md  README.md  README_DISTRIBUTED.md  package.json  start-dev.sh  start.sh  test-dev-server.sh  verify-build.js
deployment/: README.md
docs/: AGENTFLOW_PROJECT_CONFIG.md  AGENT_USAGE_GUIDE.md  AI_CLAUDE.md  AI_DEPLOYMENT.md  AI_QUICKSTART.md  AI_README.md  API.md  ARCHITECTURE.md  CLAUDE_INTEGRATION_FEASIBILITY.md  CLAUDE_TASK_RESEARCH_SUMMARY.md  CLUSTERING.md  CONFIGURATION.md  DEPLOYMENT.md  DIR_CLEANUP_SUMMARY.md  DISTRIBUTED_EXECUTION_STATUS.md  DISTRIBUTED_EXECUTION_SYSTEM.md  DISTRIBUTED_QUICK_START.md  EXECUTOR_EXAMPLES.md  EXECUTOR_QUICK_REFERENCE.md  FEATURES.md  GETTING_STARTED.md  GO_VERSION_GUIDE.md  INDEX.md  INSTALLATION_TEST_REPORT.md  INTEGRATION_TEST_REPORT.md  MEMORY_SYSTEM_GUIDE.md  MEMORY_SYSTEM_IMPLEMENTATION.md  MEMORY_WORKFLOW_DESIGN.md  NODEJS_GUIDE.md  PROJECT_STATUS_2026-01-28.md  SKILL.md  SKILL_GUIDANCE_TEST_REPORT.md  SKILL_INTEGRATION.md  SKILL_SETUP.md  SKILL_STRUCTURE.md  TEAM_A_IMPLEMENTATION_REPORT.md  TEAM_D_DELIVERABLES_SUMMARY.md  VERSION_ROADMAP.md  WEBHOOK_QUICK_START.md  ZHIPU_INTEGRATION.md  (+8 more)
docs/issue/: 引导优化.md
examples/: README.md  UPDATE.md  git-workflow.sh  git_integration_example.py  mobile_client.py  parallel-tasks.sh  programmatic-usage.js  quick-start.sh
golang/: README.md  build-all.sh  config.example.yaml  go.mod
nodejs/: .pnpm-path.sh  CHANGELOG_DATABASE_PATH.md  Dockerfile.standalone  NODEJS_STATUS.md  PACKAGING_GUIDE.md  QUICK_START.md  README.md  docker-compose.yml  package.json  package.sh  pnpm-lock.yaml  test-local-skills.js  test-orchestration-checkpoints.js  test-orchestration.js  test-parallel.js  test-real-ai.js  test-simple.js  test-worker-integration.js  tsconfig.json
old/: ?_foreign_keys=on&_journal_mode=WAL  IMPLEMENTATION_COMPLETE.md  README.md  SOCKET_ARCHITECTURE.md  SOCKET_COMPLETE.md  SOCKET_TEST_RESULTS.md  go.mod  start_http_server.sh  start_socket_server.sh  test_simple.sh  test_socket_check.go  test_socket_workflow.sh
proto/: node_sync.proto
python/: INSTALL_PYTHON.md  README.md  TEST_REPORT.md  install.sh  quick-test.sh  setup.py  simple-test.sh  test-python-version.sh  test.sh
rust/: .env  Cargo.toml  README_DISTRIBUTED.md  build-claude.sh  start-master.sh  verify-distributed-build.sh
rust/.sqlx/: data.json
rust/agentflow-core/: Cargo.toml
rust/agentflow-core/src/: database.rs  lib.rs  types.rs
rust/agentflow-core/src/executor/: killer.rs  memory_processor.rs  mod.rs  prompt_builder.rs
rust/agentflow-core/src/memory/: mod.rs
rust/agentflow-core/src/sandbox/: mod.rs
rust/agentflow-master/: .env.example  API.md  Cargo.toml  FILE_STRUCTURE.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  start.sh
rust/agentflow-master/examples/: client.rs
rust/agentflow-master/src/: config.rs  error.rs  executor.rs  lib.rs  main.rs  memory_core.rs
rust/agentflow-master/src/routes/: health.rs  memory.rs  mod.rs  tasks.rs  websocket.rs
rust/agentflow-master/tests/: integration_test.rs
rust/test-claude/: Cargo.toml
rust/test-claude/src/: main.rs
scripts/: deploy-linux.sh  deploy-macos.sh
skills/: agentflow.md
templates/: AGENTFLOW.md.example
tests/: README.md  TEST_REPORT.md  ctest_pure.go  webhook_test.sh
(+258 files in other folders)
